# bertalign-rs

./: .gitignore  Cargo.toml  README.md
bertalign-examples/: Cargo.toml
bertalign-examples/examples/bertalign/: README.md  main.rs
bertalign-examples/examples/semantic_similarity/: README.md  main.rs
bertalign-rs/: Cargo.toml  README.md
bertalign-rs/src/: error.rs  lib.rs  similarity.rs  utils.rs
bertalign-rs/src/aligner/: core.rs  mod.rs
bertalign-rs/src/embed/: bert.rs  dense.rs  labse.rs  mod.rs  normalize.rs  pooling.rs  sentence_transformer.rs  types.rs  utils.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/pysrc/bertalign_rs/: __init__.py  bertalign_rs.pyi
bindings/python/src/: error.rs  lib.rs
