[package]
name = "bertalign_rs_py"
version = "0.1.2"
edition = "2021"

[lib]
name = "bertalign_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
bertalign-rs = { path = "../../bertalign-rs" }

[build-dependencies]
pyo3-build-config = "0.25"

[features]
default = []
cuda = ["bertalign-rs/cuda"]
