[package]
name = "bertalign_rs_py"
version.workspace = true
edition.workspace = true

[lib]
name = "bertalign_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
bertalign-rs = { path = "../../bertalign-rs" }

[build-dependencies]
pyo3-build-config = "0.25"

[features]
default = []
cuda = ["bertalign-rs/cuda"]
