[project]
name = "bertalign_rs"
version = "0.0.1"
description = "Rust port of Bertalign."
authors = [{ name = "Teryn Jones" }]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/jwnz/bertalign-rs"
Repository = "https://github.com/jwnz/bertalign-rs"
Issues = "https://github.com/jwnz/bertalign-rs/issues"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "bertalign-rs/cuda"]
bindings = "pyo3"
python-source = "pysrc"
